# ufo

./: .dockerignore  .env.example  .env.production.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.yaml  redocly.yaml  sqlc.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  go.mod  go.sum
apps/api/cmd/api/: main.go
apps/api/internal/auth/: auth.go
apps/api/internal/database/: url.go  url_test.go
apps/api/internal/db/: models.go  queries.sql.go
apps/api/internal/migrate/: migrate.go
apps/api/internal/server/: assets.go  assets_test.go  authz_test.go  dto.go  enrollment.go  failover_test.go  notify.go  orchestration_test.go  server.go  unit_test.go  ws.go
apps/api/internal/spec/: README.md  openapi.yaml
apps/rover/: Cargo.toml  README.md
apps/rover/src/: main.rs  tests.rs
apps/web/: Dockerfile  next.config.mjs  package-lock.json  package.json
apps/web/app/: auth-ui.tsx  globals.css  layout.tsx
apps/web/app/[[...path]]/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/signup/: page.tsx
apps/web/components/: app-provider.tsx  app-shell.tsx  app-sidebar.tsx  board.tsx  fire.tsx  invite-banner.tsx  markdown.tsx  new-fleet-dialog.tsx  new-operation-dialog.tsx  operation-detail.tsx  pilot-icon.tsx  priority-icon.tsx  signals-menu.tsx  status-icon.tsx  tag-editor.tsx  telemetry-dialog.tsx  user-link.tsx  user-profile.tsx
apps/web/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  popover.tsx  select.tsx  sheet.tsx  sonner.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
apps/web/components/views/: crews-view.tsx  members-view.tsx  missions-view.tsx  routines-view.tsx  rovers-view.tsx  (+1 more)
apps/web/lib/: api.ts  labels.ts  routes.ts  timeline.ts  types.ts  user-mentions.ts  utils.ts  view.ts  ws.ts
db/migrations/: 0001_init.sql
db/queries/: queries.sql
scripts/: dev.sh
(+2 files in other folders)
