[package]
name = "ufo-cli"
version = "0.1.0"
edition = "2024"
description = "UFO local rover CLI — claims and runs operations on the host."
readme = "README.md"
repository = "https://github.com/fengsi/ufo"
license = "BSD-3-Clause"

[[bin]]
name = "ufo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
