[package]
name = "ufo-cli"
version = "0.5.0"
edition = "2024"
description = "UFO local rover CLI — accepts and runs operations on the host."
readme = "README.md"
homepage = "https://getufo.dev"
repository = "https://github.com/fengsi/ufo"
license = "BSD-3-Clause"

[package.metadata.docs.rs]
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-freebsd",
  "aarch64-unknown-linux-gnu",
  "x86_64-unknown-linux-gnu",
  "aarch64-pc-windows-gnullvm",
  "x86_64-pc-windows-gnullvm",
  "aarch64-pc-windows-msvc",
  "x86_64-pc-windows-msvc",
]

[[bin]]
name = "ufo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "signal", "fs"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
